--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "main": "script.ts",
   "dependencies": {
+    "@types/qs": "^6.14.0",
     "axios": "^1.6.7",
+    "qs": "^6.14.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
