feat: add environment configuration and enhance novelty model
- Add .env files support with example configuration
- Update .gitignore to include environment files
- Extend NoveltyModel with additional fields
- Add environment-based scripts in package.json
- Update README with installation and configuration instructions
- Modify API endpoints and auth flow to use environment variables
- Enhance index.ts with complete novelty payload and environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,10 @@ yarn.lock
 
 # dotenv environment variables file
 .env
+.env.production
+.env.test
+# Permitir el archivo de ejemplo
+!.env.example
 
 # IDEs and editors
 .idea/
@@ -69,4 +73,4 @@ yarn.lock
 .DS_Store
 
 # Audit reports
-audit/ 
+audit/
