feat: add Windows support and improve file path handling
- Update Excel file path handling to use path.join for cross-platform compatibility
- Add Windows-specific npm scripts for environment setup
- Include dotenv as explicit dependency
- Update README with Windows instructions and cross-platform notes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "ts-node --transpile-only src/index.ts",
     "start:prod": "cp .env.production .env && ts-node --transpile-only src/index.ts",
-    "start:test": "cp .env.test .env && ts-node --transpile-only src/index.ts"
+    "start:test": "cp .env.test .env && ts-node --transpile-only src/index.ts",
+     "start:prod:win": "node scripts/copy-env.js production && ts-node --transpile-only src/index.ts",
+    "start:test:win": "node scripts/copy-env.js test && ts-node --transpile-only src/index.ts"
   },
   "main": "script.ts",
   "dependencies": {
